<resources>
    <string name="app_name">Time Calculator</string>


    <string name="calculator_digit_1">1</string>
    <string name="calculator_digit_2">2</string>
    <string name="calculator_digit_3">3</string>
    <string name="calculator_digit_4">4</string>
    <string name="calculator_digit_5">5</string>
    <string name="calculator_digit_6">6</string>
    <string name="calculator_digit_7">7</string>
    <string name="calculator_digit_8">8</string>
    <string name="calculator_digit_9">9</string>
    <string name="calculator_digit_0">0</string>

    <string name="calculator_groupingPrefix">,</string>

    <string name="calculator_decimalPoint">.</string>

    <string name="calculator_operator_plus">+</string>
    <string name="calculator_operator_minus">-</string>
    <string name="calculator_operator_multiplication">×</string>
    <string name="calculator_operator_division">÷</string>
    <string name="calculator_operator_percent">%</string>

    <string name="calculator_bracket_opening">(</string>
    <string name="calculator_bracket_closing">)</string>


    <string name="calculator_equals">=</string>
    <string name="calculator_clear">CE</string> <!--todo C or CE?-->



    <string name="calculator_timeUnit_millisecond_abbrev">ms</string>
    <string name="calculator_timeUnit_second_abbrev">sec</string>
    <string name="calculator_timeUnit_minute_abbrev">min</string>
    <string name="calculator_timeUnit_hour_abbrev">hr</string>
    <string name="calculator_timeUnit_day_abbrev">day</string>
    <string name="calculator_timeUnit_week_abbrev">wk</string>
    <string name="calculator_timeUnit_month_abbrev">mo</string>
    <string name="calculator_timeUnit_year_abbrev">yr</string>

    <string name="calculator_timeUnit_millisecond_full">millis</string>
    <string name="calculator_timeUnit_second_full">seconds</string>
    <string name="calculator_timeUnit_minute_full">minutes</string>
    <string name="calculator_timeUnit_hour_full">hours</string>
    <string name="calculator_timeUnit_day_full">days</string>
    <string name="calculator_timeUnit_week_full">weeks</string>
    <string name="calculator_timeUnit_month_full">months</string>
    <string name="calculator_timeUnit_year_full">years</string>

    <string name="calculator_timeUnit_millisecond_title">Milli</string>
    <string name="calculator_timeUnit_second_title">Second</string>
    <string name="calculator_timeUnit_minute_title">Minute</string>
    <string name="calculator_timeUnit_hour_title">Hour</string>
    <string name="calculator_timeUnit_day_title">Day</string>
    <string name="calculator_timeUnit_week_title">Week</string>
    <string name="calculator_timeUnit_month_title">Month</string>
    <string name="calculator_timeUnit_year_title">Year</string>


    <string name="errorResult_cantDivideBy0">Cannot divide by 0</string>
    <string name="errorResult_cantMultiplyTimeQuantities">Cannot multiply time</string>
    <string name="errorResult_badFormula">Bad formula</string>


    <string-array name="options_daysInAMonth">
        <!--Don't change this order, or this will misbehave!-->
        <item>28 Days</item>
        <item>29 Days</item>
        <item>30 Days</item>
        <item>31 Days</item>
        <item>Average (30.42)</item>
    </string-array>

    <string-array name="options_daysInAYear">
        <!--Don't change this order, or this will misbehave!-->
        <item>365 Days</item>
        <item>366 Days</item>
        <item>average (365.2422)</item>
    </string-array>


    <string name="settings_daysInAYear">Days in a year</string>
    <string name="settings_daysInAMonth">Days in a month</string>
    <string name="settings_vibrateKeys">Vibrate on button press</string>
    <string name="settings_getPremium_title">Get Full version</string>
    <string name="settings_getPremium_button">Get Premium</string>
    <string name="settings_getPremium_desc_line1">No more ads</string>
    <string name="settings_autoCollapseTimeUnits">Auto-collapse time units</string>
    <string name="settings_autoCollapseTimeUnits_dialogHeader">Select which time units to auto-collapse:</string>
    <string name="settings_calculatorTheme">Calculator theme</string>
    <string name="settings_rateUs">Rate Time Calculator</string>
    <string name="settings_sendFeedback">Send quick feedback</string>
    <string name="settings_contactUs">Contact Us</string>
    <string name="settings_privacyPolicy">Privacy Policy</string>
    <string name="settings_restartTutorialShowcase">Restart tutorial showcase</string>
    <string name="settings_restartTutorialShowcase_Message">Tutorial showcase will be restarted</string>


    <string name="buyPremium_purchasingNotAvailableMessage">Sorry, Purchasing is not available right now.\nCheck your internet connection or try again later</string>
    <string name="buyPremium_purchaseButtonAction">Get Premium - @pr</string>
    <string name="buyPremium_alreadyPurchased">Already Purchased</string>


    <string name="clearHistoryDialogMessage">Clear all history?</string>

    <string name="expressionCopyMessage">Expression was copied to clipboard</string>
    <string name="resultCopyMessage">Result was copied to clipboard</string>


    <string name="copyToClipboard_result">Copy result</string>
    <string name="copyToClipboard_expression">Copy expression</string>

    <string name="showcaseTutorial_button_next">NEXT</string>
    <string name="showcaseTutorial_button_try">TRY</string>
    <string name="showcaseTutorial_button_finish">FINISH</string>


    <string name="showcaseTutorial_frame0_title">Welcome to Time Calculator!</string>
    <string name="showcaseTutorial_frame0_content">First, let\'s have a fast tutorial</string>

    <string name="showcaseTutorial_frame1a">Those are the action keys, use them like any other calculator.</string>
    <string name="showcaseTutorial_frame1b">This is a Time Unit. each converts a number into a time value.\ne.g. 30 + minutes, 2 + hours, etc.</string>
    <string name="showcaseTutorial_frame1c">The Time Bar has a drawer that contains other time units you can use. Later, you slide it down to open it.</string>
    <string name="showcaseTutorial_frame2a1">First, try calculating an expression like a normal calculator, without using time units.\nPress [5][+][7]\nand press [=]</string>
    <string name="showcaseTutorial_frame2a2">Great! this is a Simple Number Result.</string>
    <string name="showcaseTutorial_frame2b1">Now, make a Time Result by using time units from the Time Bar.\nPress [5][hour][5][minutes][x][2]\nand press [=]</string>
    <string name="showcaseTutorial_frame2b2">Great! this is a Time Result</string>
    <string name="showcaseTutorial_frame2c1">Now, make something unique- a Mixed Result.\nPress [5][seconds][+][3]\nand press [=]</string>
    <string name="showcaseTutorial_frame2c2">This is a Mixed Result!\nTime values and simple numbers cannot be mixed with +/- solely, so when this happens, the result may look like this.</string>
    <string name="showcaseTutorial_frame3a">Those are Time Blocks. Each represents a single time value.</string>
    <string name="showcaseTutorial_frame3b1">Sometimes you want to convert the time result to a smaller unit (e.g. 1 day -> 24 hours -> 1440 minutes and so on).\nFor that, you need to collapse the block.\n\nClick on one of the time blocks.</string>
    <string name="showcaseTutorial_frame3b2">You just collapsed a time block!\nYou can keep collapsing until you\'ve reached milliseconds.</string>
    <string name="showcaseTutorial_frame3c1">Now, restore the collapsed block into it\'s original shape. Double click on the collapsed block.</string>
    <string name="showcaseTutorial_frame3c2">Great! The block was revealed</string>
    <string name="showcaseTutorial_frame4a_title">History</string>
    <string name="showcaseTutorial_frame4a_content">From here you can access all previous calculations. There\'s an option there to also copy them into your clipboard.</string>
    <string name="showcaseTutorial_frame4b_title">Settings</string>
    <string name="showcaseTutorial_frame4b_content">Custom themes, other time conversions and more.</string>
    <string name="showcaseTutorial_frame5_title">That\'s it!</string>
    <string name="showcaseTutorial_frame5_content">Enjoy our app!</string>
<!--    todo eehhh?? ya sure to write it like this with the rate us??-->


</resources>
